- added filter by role for find all request